--- a/public/index.html
+++ b/public/index.html
@@ -11,10 +11,12 @@
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <div id="root"></div>
+    <!-- Attach the loading script in your <head /> -->
+    <script src="https://terminal.jup.ag/main-v2.js"></script>
     <title>Y U NO ?</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
   </body>
 </html>
