--- a/public/index.html
+++ b/public/index.html
@@ -2,14 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="./profile picture.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Y U NO? Meme Token Website" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <div id="root"></div>
-    <!-- Attach the loading script in your <head /> -->
     <script src="https://terminal.jup.ag/main-v2.js"></script>
     <title>Y U NO ?</title>
   </head>
