--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <div id="root"></div>
     <script src="https://terminal.jup.ag/main-v2.js"></script>
-    <title>Y U NO ?</title>
+    <title>CHARLIE'S B-DAY</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
